objects/FMS_Technology__mdt.object
<CustomObject>
    <fields>
        <fullName>FMS_Release_Flow__c</fullName>
        <label>FMS Release Flow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMS_Tech_Node__c</fullName>
        <label>FMS Tech Node</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Account_Number__c</fullName>
        <label>SAP Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FMS Technology</label>
    <pluralLabel>FMS Technology</pluralLabel>
</CustomObject>